# idkhowitwork

./: CMakeLists.txt  Makefile  ping_log.txt  ping_log_snippet.txt
include/: logger.h  ping.h
src/: logger.c  main.c  ping_sim.c  snippet_logger_test.c
